api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hello-api

spec:
  replicas: 3

  selector:
    matchLabels:
      app: hello-api

  template:
    metadata:
      labels:
        app: hello-api

    spec:
      containers:
        - name: hello-api
          image: hello-api:v4
          imagePullPolicy: Never
          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /health/broken
              port: 3000
            initialDelaySeconds: 2
            periodSeconds: 5


          livenessProbe:
            httpGet:
              path: /health/live
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
