security-context-lab.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security-demo
spec:
  containers:
    - name: security-demo
      image: nginx:alpine
      securityContext:
        runAsNonRoot: true
