stateful-demo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: demo-db
spec:
  serviceName: demo-db
  replicas: 3

  selector:
    matchLabels:
      app: demo-db

  template:
    metadata:
      labels:
        app: demo-db
    spec:
      containers:
        - name: demo-db
          image: nginx:alpine

          volumeMounts:
            - name: data
              mountPath: /data

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi
