admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service

spec:
  selector:
    app: admin-app

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
