api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hello-api-service

spec:
  selector:
    app: hello-api

  ports:
    - port: 80
      targetPort: 3000I 

  type: ClusterIP
