stateful-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-db
spec:
  clusterIP: None
  selector:
    app: demo-db
  ports:
    - port: 80
      targetPort: 80
