ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hello-api-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: hello.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-api-service
                port:
                  number: 80
