deny-database-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-database-ingress

spec:
  podSelector:
    matchLabels:
      app: database

  policyTypes:
    - Ingress
